SERVER-40482 SERVER-40517 Fix fastcount algorithm for rollback of prepared transactions

This fixes two bugs, both related the correctness of the algorithm for adjusting collection counts
during rollback. The first bug is that rolled-back non-majority confirmed "prepare" oplog entries
may rollback and incorrectly adjust collection fastcounts. The second bug is that a prepared and
committed transaction will have incorrect collection counts after rollback.

The new high-level order of operations during replication rollback are as follows:
1. Abort all active prepared transactions, rolling back any in-memory counts
2. Calculate collection count adjustments by scanning rolled-back oplog entries
3. If a 'commitTransaction' oplog entry is rolled-back, find the associated 'prepare' to calculate
   size adjustments
4. Rollback to the stable timestamp. Replay oplog to common point. This makes no collection count
   adjustments.
5. Set collection counts to previously calculated values
6. Reconstruct prepared transactions, which updates in-memory fastcounts