src/mongo/db/repl/replication_recovery.h
@@ -55,6 +55,13 @@ public:
      */
     virtual void recoverFromOplog(OperationContext* opCtx,
                                   boost::optional<Timestamp> stableTimestamp) = 0;
+
+    /**
+     * Reconstruct prepared transactions by iterating over the transactions table to see which
+     * transactions should be in the prepared state, getting the corresponding oplog entry and
+     * applying the operations.
+     */
+    virtual void reconstructPreparedTransactions(OperationContext* opCtx) = 0;
 };
 
 class ReplicationRecoveryImpl : public ReplicationRecovery {
@@ -68,14 +75,9 @@ public:
     void recoverFromOplog(OperationContext* opCtx,
                           boost::optional<Timestamp> stableTimestamp) override;
 
-private:
-    /**
-     * Reconstruct prepared transactions by iterating over the transactions table to see which
-     * transactions should be in the prepared state, getting the corresponding oplog entry and
-     * applying the operations.
-     */
-    void _reconstructPreparedTransactions(OperationContext* opCtx);
+    void reconstructPreparedTransactions(OperationContext* opCtx) override;
 
+private:
     /**
      * After truncating the oplog, completes recovery if we're recovering from a stable timestamp
      * or a stable checkpoint.
